--- a/atcat/index.html
+++ b/atcat/index.html
@@ -195,12 +195,54 @@
 	<strong> March 15th, 2022 </strong> <br>
 	<a href="http://www.reluctantm.com/gcruttw/">
 	  Geoffrey Cruttwell</a>, Mount Allison University<br><br>
+        Title: <em>Algebraic geometry and Tangent categories</em><br>
+	<p>
+	  Abstract:<br>
+          Tangent categories axiomatize the existence of a "tangent
+          bundle" endofunctor on a category. The canonical example is the category
+          of smooth manifolds, but many other examples exist, including some
+          recent examples from functor calculus. <br> <br>
+
+          In this series of two talks, I'll describe a tangent category structure
+          in algebraic geometry (specifically, on the category of affine schemes)
+          and explain why I think it's interesting. <br> <br>
+
+          The first talk will be introductory: I'll introduce/review tangent
+          categories and affine schemes, and then look at the tangent category
+          structure of affine schemes.  In the second talk, we'll see how concepts
+          you can define in any tangent category (such as vector fields,
+          differential bundles, and connections) apply to this particular
+          example, and how these concepts relate to existing notions in algebraic geometry.<br><br>
+
+          This talk is based on joint work with JS Lemay.
+	</p>
       </li>
 
       <li>
 	<strong> March 22nd, 2022 </strong> <br>
 	<a href="http://www.reluctantm.com/gcruttw/">
 	  Geoffrey Cruttwell</a>, Mount Allison University<br><br>
+        Title: <em>Algebraic geometry and Tangent categories</em><br>
+	<p>
+	  Abstract:<br>
+          Tangent categories axiomatize the existence of a "tangent
+          bundle" endofunctor on a category. The canonical example is the category
+          of smooth manifolds, but many other examples exist, including some
+          recent examples from functor calculus. <br> <br>
+
+          In this series of two talks, I'll describe a tangent category structure
+          in algebraic geometry (specifically, on the category of affine schemes)
+          and explain why I think it's interesting. <br> <br>
+
+          The first talk will be introductory: I'll introduce/review tangent
+          categories and affine schemes, and then look at the tangent category
+          structure of affine schemes.  In the second talk, we'll see how concepts
+          you can define in any tangent category (such as vector fields,
+          differential bundles, and connections) apply to this particular
+          example, and how these concepts relate to existing notions in algebraic geometry.<br><br>
+
+          This talk is based on joint work with JS Lemay.
+	</p>
       </li>
 
       <li>
