--- a/atcat/index.html
+++ b/atcat/index.html
@@ -192,7 +192,8 @@
       </li>
 
       <li>
-	<strong> March 15th, 2022 </strong> <br>
+	<strong> March 15th, 2022 </strong>[<a href="./geoff-cat2022_tanCats_Alg_Geometry.pdf">slides</a>]
+        [<a href="./videos/march-15-geoff-cruttwell.mp4">video</a>] <br>
 	<a href="http://www.reluctantm.com/gcruttw/">
 	  Geoffrey Cruttwell</a>, Mount Allison University<br><br>
         Title: <em>Algebraic geometry and Tangent categories</em><br>
@@ -219,8 +220,8 @@
       </li>
 
       <li>
-	<strong> March 22nd, 2022 </strong> [<a href="./geoff-cat2022_tanCats_Alg_Geometry.pdf">slides</a>]
-        [<a href="./videos/march-15-geoff-cruttwell.mp4">video</a>]<br><br>
+	<strong> March 22nd, 2022 </strong>[<a href="./atcat2022_tanCats_Alg_Geometry_part2.pdf">slides</a>]
+        [<a href="./videos/march-22-geoff-cruttwell.mp4">video</a>]<br>
 	<a href="http://www.reluctantm.com/gcruttw/">
 	  Geoffrey Cruttwell</a>, Mount Allison University<br><br>
         Title: <em>Algebraic geometry and Tangent categories</em><br>
