--- a/atcat/index.html
+++ b/atcat/index.html
@@ -250,6 +250,29 @@
       <li>
 	<strong> March 29th, 2022 </strong> <br>
 	Geoffrey Vooys, Dalhousie University <br><br>
+        Title: <em>Persistent Cohomology for Grothendieck Toposes</em><br>
+	<p>
+	  Abstract:<br>
+          Persistent (co)homology of spaces is a tool used
+          by topological data analysists to give information about
+          a topological space in terms of a filtration of vector spaces on the
+          space. At a higher level, persistent cohomology is used to give
+          information and features about a topological space as it persists over
+          time. In more recent years, persistent cohomology on a topological space
+          was generalized to a persistent sheaf cohomology by way of Cech cohomology for sheaves.<br><br>
+
+          In this talk we will discuss and show how to generalize persistent
+          cohomology on a topological space to give a notion of persistent
+          cohomology for Grothendieck toposes both in terms of a Cech persistent
+          cohomology and a right derived functor persistent cohomology ---this
+          gives us two different ways of describing how geometric information
+          can persist through a filtration of sheaves on a site. As an application
+          and time-permitting, we will also describe a relative Comparison Lemma
+          for sites and its interaction with persistent Cech cohomology on
+          Grothendieck toposes, and/or a persistent Artin Comparison Theorem
+          for finite type schemes over the complex numbers.<br>
+          This is joint work with Dorrete Pronk and Deni Salja.
+	</p>
       </li>
 
       <li>
@@ -265,7 +288,7 @@
     
     <div class="updated">
       <p>
-	  Updated Feb 8, 2022 by 
+	  Updated March 25, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
