--- a/atcat/index.html
+++ b/atcat/index.html
@@ -277,8 +277,43 @@
 
       <li>
 	<strong> April 5th, 2022 </strong> <br>
-	<a href="https://dariendewolf.com/">
-	  Darien DeWolf</a>, Brandon University<br>
+	Marcello Lanfranchi, Dalhousie University <br><br>
+        Title: <em>Operadic tangent categories</em><br>
+	<p>
+	  Abstract:<br>
+          A few weeks ago, my supervisor Geoffrey Cruttwell presented his research on
+          tangent category theory applied to algebraic geometry in two ATCAT seminar
+          talks. With this work, we now know that algebraic geometry, differential
+          geometry and synthetic geometry are models for the axiomatic theory of tangent
+          categories. <br><br>
+
+          One of the main questions I posed to Geoff when I applied for the PhD program,
+          was whether non-commutative geometry could be described using the language of
+          tangent categories. My background in theoretical physics makes me care about
+          non-commutative geometry because it could be a valid mathematical framework to
+          describe general relativity in a way that is compatible with quantum mechanics.
+          Geoff and Lemay's work on commutative algebras allowed me to reformulate my
+          question in the following terms: can we extend this construction to general
+          associative algebras? <br><br>
+
+          In this talk, I present an answer to this question showing how the construction
+          presented by Geoff can be extended to non-commutative geometry and more
+          generally to algebras of (algebraic symmetric) operads. <br><br>
+
+          The talk will be structured as follows: I will start by giving the main
+          motivation for the talk, then I will briefly recall the main definitions and
+          constructions of tangent category theory and of Geoffâ€™s construction. I will
+          then give the main definitions and results of operad theory. Therefore, I will
+          show how to construct a canonical tangent structure on the category of algebras
+          over an operad. Then, I will discuss the corresponding tangent structure over
+          the opposite category. Finally, I will give some of the results that I found so
+          far that extend the constructions of the commutative case. <br><br>
+
+
+          This work is in collaboration with my supervisors Geoffrey Cruttwell and
+          Dorette Pronk. I also would like to thank J.S. Lemay for the great discussions
+          and ideas he shared with me about his work and mine. <br><br>
+        </p>
       </li>
 
     </ul>
@@ -288,7 +323,7 @@
     
     <div class="updated">
       <p>
-	  Updated March 25, 2022 by 
+	  Updated April 2, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
