add video link.

--- a/atcat/index.html
+++ b/atcat/index.html
@@ -276,7 +276,7 @@
       </li>
 
       <li>
-	<strong> April 5th, 2022 </strong> <br>
+	<strong> April 5th, 2022 </strong>[<a href="./videos/4-5-Marcello_Lanfranchi.mp4">video</a>]<br>
 	Marcello Lanfranchi, Dalhousie University <br><br>
         Title: <em>Operadic tangent categories</em><br>
 	<p>
