add a talk for the summer.

--- a/atcat/index.html
+++ b/atcat/index.html
@@ -316,6 +316,20 @@
         </p>
       </li>
 
+      <li>
+	<strong> May 3rd, 2022 </strong><br>
+	Luuk Stehouwer, Max Planck Institute for Mathematics<br><br>
+        Title: <em>Group actions on categories and their fixed points</em><br>
+	<p>
+	  Abstract:<br>
+          Actions of a group on a set can be categorified to actions of a
+          group on a category. The fixed point set becomes a fixed point category. I
+          will give examples coming from representation theory, topology and physics.
+          If time permits, I will sketch a generalization to actions of 2-groups on
+          2-categories.
+        </p>
+      </li>
+      
     </ul>
 
   <p>
@@ -323,7 +337,7 @@
     
     <div class="updated">
       <p>
-	  Updated April 2, 2022 by 
+	  Updated May 3, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
