--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
 
 <h3><a href="#Top">Papers</a> </h3>
 <ul>
+  <li> 
+    <em>On the Lambek embedding and the category of product-preserving presheaves.</em>
+    
+    <p> Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, manuscript, 2022. [<a href="./document/papers/lambek.pdf">pdf</a>]
+
+  </li>
+
   <a name="proto-quipper"></a>
   <li> 
     <em>Proto-Quipper with dynamic lifting.</em>
