--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <em>On the Lambek embedding and the category of product-preserving presheaves.</em>
     
     <p> Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, manuscript, 2022. [<a href="./document/papers/lambek.pdf">pdf</a>]
-
+      [<a href="https://arxiv.org/abs/2205.06068">arXiv</a>]
   </li>
 
   <a name="proto-quipper"></a>
