add qpl conference.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <li> 
     <em>A biset-enriched categorical model for Proto-Quipper with dynamic lifting.</em>
     
-    <p> Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, manuscript, 2022. [<a href="./document/papers/dynlift-model.pdf">pdf</a>]
+    <p> Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, 19th International Conference on Quantum Physics and Logic (QPL), 2022. [<a href="./document/papers/dynlift-model.pdf">pdf</a>]
       [<a href="https://arxiv.org/abs/2204.13039">arXiv</a>]
   </li>
 
