add recent talks and slides.

--- a/index.html
+++ b/index.html
@@ -322,11 +322,23 @@
 <h3><a href="#Top">Talks</a> </h3>
 
 <ul>
-  <li><p><em> Proto-Quipper: a quantum programming language</em>,
+    <li><p><em>Proto-Quipper with dynamic lifting</em>,
+        June 27th - July 1st, 2022, 19th International Conference on Quantum Physics and Logic, Oxford, UK. [<a href="./document/talks/dyn.pdf">slides</a>]     
+  </p></li>
+    <li><p><em>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</em>,
+        June 27th - July 1st, 2022, 19th International Conference on Quantum Physics and Logic, Oxford, UK.
+        [<a href="./document/talks/qpl-biset.pdf">slides</a>]
+  </p></li>
+    <li><p><em>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</em>,
+        June 21st - June 26th, 2022, 29th Foundational Methods in Computer Science Workshop (FMCS), University of Calgary, Canada.
+        [<a href="./document/talks/biset.pdf">slides</a>]
+  </p></li>
+
+  <li><p><em>Proto-Quipper: a quantum programming language</em>,
       July 2nd, 2021, Logic, Quantum Computing, and Artificial Intelligence, Online workshop. 
   </p></li>
 
-  <li><p><em>Linear dependent theory for quantum programming languages</em>, June 11th, 2021, QPL, Online conference. 
+  <li><p><em>Linear dependent theory for quantum programming languages</em>, June 11th, 2021, 18th International Conference on Quantum Physics and Logic, Online conference. 
   </p></li>
 
   <li><p><em>Fun with cryptography</em>,
@@ -335,13 +347,17 @@
   </p></li>
 
   <li><p><em>Linear dependent theory for quantum programming languages</em>,
-      July 8th, 2020, LICS, Online conference.  
+      July 8th, 2020, 35th Annual ACM/IEEE Symposium on Logic in Computer Science, Online conference.  
       [<a href="https://www.youtube.com/watch?v=VQw-G3DGY2w">talk</a>]
   </p></li>
-  
+
+    <li><p><em>A tutorial introduction to quantum circuit programming in dependently typed Proto-Quipper</em>,
+      July 10th, 2020, 12th Conference on Reversible Computation, Online conference.
+  </p></li>
+
   <li><p><em>Linear dependent types for quantum circuit programming</em>,
       February 17th, 2020, PL Reading Group, University of Maryland, College Park, Maryland, USA.
-      [<a href="./document/talks/umd-2020.pdf">Slides</a>]
+      [<a href="./document/talks/umd-2020.pdf">slides</a>]
   </p></li>
   
   <li><p><em>Dependent types in Proto-quipper</em>,
@@ -350,25 +366,25 @@
   
   <li><p><em>Encoding Data in Lambda Calculus: An Introduction</em>,
       September 26th, 2017, Atlantic Category Seminar, Dalhousie University, Canada.
-      [<a href="./document/talks/lam.pdf">Slides</a>]</p></li>
+      [<a href="./document/talks/lam.pdf">slides</a>]</p></li>
 
   <li><p><em>Proof Relevant Corecursive Resolution</em>,
-      June 22nd, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="./document/talks/spls-2016.pdf">Slides</a>]</p></li>
+      June 22nd, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="./document/talks/spls-2016.pdf">slides</a>]</p></li>
 
   <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>,
-      July 13th, 2015, LOPSTR, Siena, Italy. [<a href="./document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
+      July 13th, 2015, 25th International Symposium on Logic-Based Program Synthesis and Transformation, Siena, Italy. [<a href="./document/talks/lopstr-2015.pdf">slides</a>]</p></li>
 
   <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>,
-      July 15th, 2014, RTA-TLCA, Vienna, Austria. [<a href="./document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
+      July 15th, 2014, Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications, Vienna, Austria. [<a href="./document/talks/rta-tlca-14.pdf">slides</a>]</p></li>
 
   <li><p><em>Lambda Encodings in Type Theory</em>,
-      May 2nd, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="./document/talks/thesis-talk.pdf">Slides</a>]</p></li>
+      May 2nd, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="./document/talks/thesis-talk.pdf">slides</a>]</p></li>
 
   <li><p><em>Dependent Lambda Encoding with Self Types</em>,
-      September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [<a href="./document/talks/dtp-2013.pdf">Slides</a>]</p></li>
+      September 2013, Workshop on Dependently-Typed Programming, Boston, MA. [<a href="./document/talks/dtp-2013.pdf">slides</a>]</p></li>
 
   <li><p><em>A Framework for Internalizing Relations into Type Theory</em>,
-      August 2011, PSATTT workshop, Wroclaw. Poland. [<a href="./document/talks/psattt11-talk.pdf">Slides</a>]</p></li>
+      August 2011, International Workshop on Proof-Search in Axiomatic Theories and Type Theories, Wroclaw. Poland. [<a href="./document/talks/psattt11-talk.pdf">slides</a>]</p></li>
 </ul>
 
 <hr />
