create winter 2022 folder

--- a/atcat/winter-2022/winter-2022.html
+++ b/atcat/winter-2022/winter-2022.html
@@ -81,7 +81,7 @@
       </li>
 
       <li>
-	<strong> February 15th, 2022 </strong>[<a href="./videos/theo-johnson-freyd-2-15-22.mp4">video</a>]<br>
+	<strong> February 15th, 2022 </strong>[<a href="../videos/theo-johnson-freyd-2-15-22.mp4">video</a>]<br>
 	<a href="http://categorified.net/">
 	  Theo Johnson-Freyd</a>, Dalhousie University<br><br>
 	Title: <em>Categorified algebraic closure</em><br>
@@ -194,7 +194,7 @@
 
       <li>
 	<strong> March 15th, 2022 </strong>[<a href="./geoff-cat2022_tanCats_Alg_Geometry.pdf">slides</a>]
-        [<a href="./videos/march-15-geoff-cruttwell.mp4">video</a>] <br>
+        [<a href="../videos/march-15-geoff-cruttwell.mp4">video</a>] <br>
 	<a href="http://www.reluctantm.com/gcruttw/">
 	  Geoffrey Cruttwell</a>, Mount Allison University<br><br>
         Title: <em>Algebraic geometry and Tangent categories</em><br>
@@ -222,7 +222,7 @@
 
       <li>
 	<strong> March 22nd, 2022 </strong>[<a href="./atcat2022_tanCats_Alg_Geometry_part2.pdf">slides</a>]
-        [<a href="./videos/march-22-geoff-cruttwell.mp4">video</a>]<br>
+        [<a href="../videos/march-22-geoff-cruttwell.mp4">video</a>]<br>
 	<a href="http://www.reluctantm.com/gcruttw/">
 	  Geoffrey Cruttwell</a>, Mount Allison University<br><br>
         Title: <em>Algebraic geometry and Tangent categories</em><br>
@@ -277,7 +277,7 @@
       </li>
 
       <li>
-	<strong> April 5th, 2022 </strong>[<a href="./videos/4-5-Marcello_Lanfranchi.mp4">video</a>]<br>
+	<strong> April 5th, 2022 </strong>[<a href="../videos/4-5-Marcello_Lanfranchi.mp4">video</a>]<br>
 	Marcello Lanfranchi, Dalhousie University <br><br>
         Title: <em>Operadic tangent categories</em><br>
 	<p>
