update current term schedule.

--- a/atcat/index.html
+++ b/atcat/index.html
@@ -43,6 +43,96 @@
           2-categories.
         </p>
       </li>
+
+      <li>
+	<strong> August 16th, 2022 </strong><br>
+	Richard Wood, Dalhousie University<br><br>
+        Title: <em>Totally Distributive Categories</em><br>
+	<p>
+	  Abstract:<br>
+          A  distributive law, in the sense of JM Beck, of a monad $M$ over a monad $A$, is a
+          2-cell
+          $MA \to AM$, subject to some equations ensuring precisely that the composite $AM$
+          carries
+          an obvious monad structure depending on the structures of $M$ and of $A$. The
+          notion is not symmetric in $M$ and $A$. In particular, an object $k$ carries an
+          $AM$-algebra structure if and only if $k$ carries an $A$-algebra structure $a:Ak \to k$;
+          $k$ carries an $M$-algebra ​structure $m:Mk \to k$; and $a:Ak \to k$ is a homomorphism of
+          $M$-algebras. <br> <br>
+
+          These very general ideas are applicable to 2-monads on the 2-category $\mathrm{CAT}$,
+          whereon some
+          monads, known as KZ-monads, have the property that structures are left adjoint
+          to units, while other monads, known as coKZ-monads, have the property that
+          structures are right adjoint to units. It follows that a category $K$ either
+          carries a [co]KZ-structure or it doesn't.
+          In broad strokes, the algebras for a KZ-monad $A$ [coKZ-monad $M$] are categories
+          having certain colimits, we could call them $A$-colimits [certain limits, we
+          could call them $M$-limits].
+          If there is a distributive law $MA \to AM$ (there either is one or there isn't
+          one) then a category
+          $K$ is an $AM$-algebra iff $K$ has $A$-colimits; $K$ has $M$-limits; and $AK \to K$ (left
+          adjoint to the unit $K \to AK$) preserves $M$-limits. Preservation of $M$-limits by
+          $AK \to K$ provides the definition of
+          "$M$-limits distribute over $A$-colimits". <br> <br>
+
+          In other broad strokes, the KZ-monads live in the construction $K \mapsto \mathrm{CAT}(K^
+          {\mathrm{op}},\mathbf{Set})$ and the coKZ-monads live in the construction $K \mapsto \mathrm{CAT}(K,\mathbf{Set})^{\mathrm{op}}$.
+          These constructions are not monads on $\mathrm{CAT}$. However, a locally small category $K$
+          is said to be total(ly cocomplete) if the Yoneda functor $Y \to \mathrm{CAT}(K^{\mathrm{op}}, \mathbf{Set})$
+          has a left adjoint $X$ and totally distributive if there is an $F \dashv X \dashv Y$. The point
+          of these talks is to explain why totally distributive categories warrant the
+          name, given the orthodoxy of the first two paragraphs, and reach towards a
+          characterization of such. By the way, for any small category $S$, $\mathbf{Set}^{S^{\mathrm{op}}}$ is
+          totally distributive but $({\mathbf{Set}^S})^{\mathrm{op}}$, while total, is not totally
+          distributive.
+        </p>
+      </li>
+
+      <li>
+	<strong> August 23rd, 2022 </strong><br>
+	Richard Wood, Dalhousie University<br><br>
+        Title: <em>Totally Distributive Categories</em><br>
+	<p>
+	  Abstract:<br>
+          A  distributive law, in the sense of JM Beck, of a monad $M$ over a monad $A$, is a
+          2-cell
+          $MA \to AM$, subject to some equations ensuring precisely that the composite $AM$
+          carries
+          an obvious monad structure depending on the structures of $M$ and of $A$. The
+          notion is not symmetric in $M$ and $A$. In particular, an object $k$ carries an
+          $AM$-algebra structure if and only if $k$ carries an $A$-algebra structure $a:Ak \to k$;
+          $k$ carries an $M$-algebra ​structure $m:Mk \to k$; and $a:Ak \to k$ is a homomorphism of
+          $M$-algebras. <br> <br>
+
+          These very general ideas are applicable to 2-monads on the 2-category $\mathrm{CAT}$,
+          whereon some
+          monads, known as KZ-monads, have the property that structures are left adjoint
+          to units, while other monads, known as coKZ-monads, have the property that
+          structures are right adjoint to units. It follows that a category $K$ either
+          carries a [co]KZ-structure or it doesn't.
+          In broad strokes, the algebras for a KZ-monad $A$ [coKZ-monad $M$] are categories
+          having certain colimits, we could call them $A$-colimits [certain limits, we
+          could call them $M$-limits].
+          If there is a distributive law $MA \to AM$ (there either is one or there isn't
+          one) then a category
+          $K$ is an $AM$-algebra iff $K$ has $A$-colimits; $K$ has $M$-limits; and $AK \to K$ (left
+          adjoint to the unit $K \to AK$) preserves $M$-limits. Preservation of $M$-limits by
+          $AK \to K$ provides the definition of
+          "$M$-limits distribute over $A$-colimits". <br> <br>
+
+          In other broad strokes, the KZ-monads live in the construction $K \mapsto \mathrm{CAT}(K^
+          {\mathrm{op}},\mathbf{Set})$ and the coKZ-monads live in the construction $K \mapsto \mathrm{CAT}(K,\mathbf{Set})^{\mathrm{op}}$.
+          These constructions are not monads on $\mathrm{CAT}$. However, a locally small category $K$
+          is said to be total(ly cocomplete) if the Yoneda functor $Y \to \mathrm{CAT}(K^{\mathrm{op}}, \mathbf{Set})$
+          has a left adjoint $X$ and totally distributive if there is an $F \dashv X \dashv Y$. The point
+          of these talks is to explain why totally distributive categories warrant the
+          name, given the orthodoxy of the first two paragraphs, and reach towards a
+          characterization of such. By the way, for any small category $S$, $\mathbf{Set}^{S^{\mathrm{op}}}$ is
+          totally distributive but $({\mathbf{Set}^S})^{\mathrm{op}}$, while total, is not totally
+          distributive.
+        </p>
+      </li>
     </ul>
 
   <p>
@@ -50,7 +140,7 @@
     
     <div class="updated">
       <p>
-	  Updated May 3, 2022 by 
+	  Updated August 8, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
