--- a/atcat/index.html
+++ b/atcat/index.html
@@ -21,7 +21,7 @@
   <p>
 
     Information about winter 2022 seminars can be found 
-    <a href="https://www.mathstat.dal.ca/~fu/atcat/winter-2022.html">here</a>.
+    <a href="https://www.mathstat.dal.ca/~fu/atcat/winter-2022/winter-2022.html">here</a>.
     
   </p>
     
