--- a/atcat/index.html
+++ b/atcat/index.html
@@ -92,45 +92,34 @@
       <li>
 	<strong> August 23rd, 2022 </strong><br>
 	Richard Wood, Dalhousie University<br><br>
-        Title: <em>Totally Distributive Categories</em><br>
+        Title: <em>Totally Distributive Categories II</em><br>
 	<p>
 	  Abstract:<br>
-          A  distributive law, in the sense of JM Beck, of a monad $M$ over a monad $A$, is a
-          2-cell
-          $MA \to AM$, subject to some equations ensuring precisely that the composite $AM$
-          carries
-          an obvious monad structure depending on the structures of $M$ and of $A$. The
-          notion is not symmetric in $M$ and $A$. In particular, an object $k$ carries an
-          $AM$-algebra structure if and only if $k$ carries an $A$-algebra structure $a:Ak \to k$;
-          $k$ carries an $M$-algebra ​structure $m:Mk \to k$; and $a:Ak \to k$ is a homomorphism of
-          $M$-algebras. <br> <br>
+          In the first talk I have tried to explain why a locally small category $K$, with
+          Yoneda functor $Y:K \to \mathrm{CAT}(K^{\mathrm{op}}, \mathbf{Set})$ and adjunctions
+          $F \dashv X \dashv Y$, warrants the
+          name "totally distributive category &#8212 TD". Namely: $X$ provides the colimits
+          for a totally cocomplete catgory, in the sense of Street and Walters; $F(\dashv X)$
+          ensures that $K$ has the limits of a cototally complete category; and $(F\dashv)X$ tells
+          us that the provider of total colimits preserves cototal limits. The theory of
+          monads suggests it is correct to say that such $K$ are those for which cototal
+          limits distribute over total colimits. In this talk I want to report on efforts
+          to characterize such $K$. <br><br>
 
-          These very general ideas are applicable to 2-monads on the 2-category $\mathrm{CAT}$,
-          whereon some
-          monads, known as KZ-monads, have the property that structures are left adjoint
-          to units, while other monads, known as coKZ-monads, have the property that
-          structures are right adjoint to units. It follows that a category $K$ either
-          carries a [co]KZ-structure or it doesn't.
-          In broad strokes, the algebras for a KZ-monad $A$ [coKZ-monad $M$] are categories
-          having certain colimits, we could call them $A$-colimits [certain limits, we
-          could call them $M$-limits].
-          If there is a distributive law $MA \to AM$ (there either is one or there isn't
-          one) then a category
-          $K$ is an $AM$-algebra iff $K$ has $A$-colimits; $K$ has $M$-limits; and $AK \to K$ (left
-          adjoint to the unit $K \to AK$) preserves $M$-limits. Preservation of $M$-limits by
-          $AK \to K$ provides the definition of
-          "$M$-limits distribute over $A$-colimits". <br> <br>
-
-          In other broad strokes, the KZ-monads live in the construction $K \mapsto \mathrm{CAT}(K^
-          {\mathrm{op}},\mathbf{Set})$ and the coKZ-monads live in the construction $K \mapsto \mathrm{CAT}(K,\mathbf{Set})^{\mathrm{op}}$.
-          These constructions are not monads on $\mathrm{CAT}$. However, a locally small category $K$
-          is said to be total(ly cocomplete) if the Yoneda functor $Y \to \mathrm{CAT}(K^{\mathrm{op}}, \mathbf{Set})$
-          has a left adjoint $X$ and totally distributive if there is an $F \dashv X \dashv Y$. The point
-          of these talks is to explain why totally distributive categories warrant the
-          name, given the orthodoxy of the first two paragraphs, and reach towards a
-          characterization of such. By the way, for any small category $S$, $\mathbf{Set}^{S^{\mathrm{op}}}$ is
-          totally distributive but $({\mathbf{Set}^S})^{\mathrm{op}}$, while total, is not totally
-          distributive.
+          I think it is clear that totality challenges the orthodoxy of which [co]limits
+          really merit the name "small [co]limits". The characterization of TD categories
+          challenges the orthodoxy of which category-like structures also merit the
+          adjective "small". Koslowski introduced a category-like structure, known as a
+          "taxon". A taxon ${\bf T}$ admits a hat construction for which $\hat{\bf T}$ is a
+          category. Several years ago, I showed that every TD $K$ gives rise to a locally
+          small taxon, $\tilde{K}$, for which there is an equivalence $K \Rightarrow \hat{\tilde{K}}$.
+          Now since $K$ is locally small, $\hat{\tilde{K}}$ is locally small. In light of a
+          famous result of Freyd and Street, I propose to say that $\tilde{K}$ is "Freyd/
+          Street small". Yet, the set of objects of $\tilde{K}$ is the set of objects of $K$.
+          Rather surprisingly, Freyd/Street smallness appears to be a notion  of
+          smallness that allows one to prove the sort of results that one expects for
+          small category-like stuctures, directly, &#8212 without reference to the size of
+          the set of objects.
         </p>
       </li>
     </ul>
@@ -140,7 +129,7 @@
     
     <div class="updated">
       <p>
-	  Updated August 8, 2022 by 
+	  Updated August 18, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
