--- a/atcat/index.html
+++ b/atcat/index.html
@@ -49,7 +49,8 @@
           </li>
           <li> 
              <strong> October 11th, 2022 </strong><br> 
-             TBD<br><br> 
+             Robert Pare<br>
+             Title: The Double Category of Abelian Groups<br>
           </li>
           <li> 
              <strong> October 18th, 2022 </strong><br> 
@@ -74,7 +75,7 @@
           </li>
           <li> 
              <strong> November 29th, 2022 </strong><br> 
-             TBD<br><br> 
+             Julien Ross<br><br> 
           </li>
           <li> 
              <strong> December 6th, 2022 </strong><br> 
