--- a/atcat/index.html
+++ b/atcat/index.html
@@ -33,15 +33,52 @@
       
           <li> 
              <strong> September 13rd, 2022 </strong><br> 
-             Denni Salja<br><br> 
+             Deni Salja, Dalhousie University<br><br>
+             Title: Pseudocolimits of filtered diagrams of internal categories<br><br>
+             Abstract:<br>
+             Pseudocolimits are formal gluing constructions used to combine objects
+             in a category that are indexed by a pseudofunctor. When the objects
+             are categories and the domain of the pseudofunctor is a small filtered
+             category it is known from Exercise 6.6 of Exposé 6 of SGA4 that the
+             pseudocolimit can be computed by taking the Grothendieck construction
+             of the pseudofunctor and then inverting the class of cartesian arrows
+             with respect to the canonical fibration. In my masters thesis I described a
+             set of conditions on an ambient category E for constructing an internal
+             Grothendieck construction and another set of conditions on E along
+             with conditions on an internal category, ℂ, in Cat(E) and a map
+             w : W → ℂ₁ that allow us to translate the axioms for a category of
+             (right) fractions, and construct an internal category of (right)
+             fractions. These can be combined in a suitable context to compute the
+             pseudocolimit of a (filtered) diagram of internal categories.
           </li>
           <li> 
              <strong> September 20th, 2022 </strong><br> 
-             Robert Raphael<br><br> 
+             Robert Raphael, Concordia University<br><br>
+             Title: Applications to two reflectors to the ring C1<br><br>
+             Abstract: <br>
+             This is a progress report on joint work with Walter Burgess of the University
+             of Ottawa.<br><br>
+
+             We procede from work with Barr and Kennison which appeared in TAC 30(2015)
+             229-304. I will resume this work which concerns embedding a subcategory of
+             rings into a complete one.<br><br>
+
+             The ring C1 of continuously differentiable functions from the reals to the
+             reals is not complete for the two instances that interest us. Thus we seek the
+             completions of C1. This leads us into questions in analysis for which we have
+             progress but lack definitive answers to date.
+
           </li>
           <li> 
              <strong> September 27th, 2022 </strong><br> 
-             Andre Kornell<br><br> 
+             Andre Kornell, Dalhousie University<br><br>
+             Title: Structured objects in categories of relations<br><br>
+             Abstract:<br>
+             We will look at several examples of biproduct dagger compact closed categories, which are also known as strongly compact closed categories with biproducts. Such a category is a dagger category that is equipped with two symmetric monoidal structures $\oplus$ and $\otimes$, where $\oplus$ is a biproduct and $\otimes$ has dual objects. A biproduct dagger compact closed category is automatically enriched over commutative monoids. In some natural examples, these monoids are cancellative, but in other natural examples they are idempotent. This talk will focus on the latter class.<br><br>
+
+             Specifically, we will look at several examples of biproduct dagger compact closed categories that are enriched over the category of bounded lattices and join-homomorphisms. We will define poset objects and group objects in this setting, recovering a number of familiar examples including discrete quantum groups. Thus, the last part of this talk will focus on the category of quantum sets and their binary relations.
+
+             
           </li>
           <li> 
              <strong> October 4th, 2022 </strong><br> 
@@ -49,12 +86,12 @@
           </li>
           <li> 
              <strong> October 11th, 2022 </strong><br> 
-             Robert Pare<br>
+             Robert Pare<br><br>
              Title: The Double Category of Abelian Groups<br>
           </li>
           <li> 
              <strong> October 18th, 2022 </strong><br> 
-             TBD<br><br> 
+             Michael Lambert<br><br> 
           </li>
           <li> 
              <strong> October 25th, 2022 </strong><br> 
