add a misc page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <li class="nbsp">&nbsp;</li>
         <li><a href="#teaching">Teaching</a></li>
         <li class="nbsp">&nbsp;</li>
-        
+        <li><a href="misc.html">Misc</a></li>
       </ul>
     </div>  
 
