--- a/misc.html
+++ b/misc.html
@@ -21,7 +21,7 @@
          Matt Might's <a href="https://matt.might.net/articles">blog</a> has a lot of advice for life in academia.
       </li>
      <li>
-       Paul Graham's <a href="http://www.paulgraham.com/articles.html">essays</a> are very eye-opening. 
+       Paul Graham's <a href="http://www.paulgraham.com/articles.html">essays</a>. 
      </li>
       
       
