--- a/atcat/index.html
+++ b/atcat/index.html
@@ -57,7 +57,7 @@
              Title: Applications to two reflectors to the ring C1<br><br>
              Abstract: <br>
              This is a progress report on joint work with Walter Burgess of the University
-             of Ottawa.<br><br>
+of Ottawa.<br><br>
 
              We procede from work with Barr and Kennison which appeared in TAC 30(2015)
              229-304. I will resume this work which concerns embedding a subcategory of
@@ -70,53 +70,180 @@
 
           </li>
           <li> 
-             <strong> September 27th, 2022 </strong><br> 
+             <strong> October 4th, 2022 </strong><br> 
              Andre Kornell, Dalhousie University<br><br>
              Title: Structured objects in categories of relations<br><br>
              Abstract:<br>
-             We will look at several examples of biproduct dagger compact closed categories, which are also known as strongly compact closed categories with biproducts. Such a category is a dagger category that is equipped with two symmetric monoidal structures $\oplus$ and $\otimes$, where $\oplus$ is a biproduct and $\otimes$ has dual objects. A biproduct dagger compact closed category is automatically enriched over commutative monoids. In some natural examples, these monoids are cancellative, but in other natural examples they are idempotent. This talk will focus on the latter class.<br><br>
+             We will look at several examples of biproduct dagger
+             compact closed categories, which are also known as
+             strongly compact closed categories with biproducts. Such
+             a category is a dagger category that is equipped with two
+             symmetric monoidal structures $\oplus$ and $\otimes$,
+             where $\oplus$ is a biproduct and $\otimes$ has dual
+             objects. A biproduct dagger compact closed category is
+             automatically enriched over commutative monoids. In some
+             natural examples, these monoids are cancellative, but in
+             other natural examples they are idempotent. This talk
+             will focus on the latter class.<br><br>
 
-             Specifically, we will look at several examples of biproduct dagger compact closed categories that are enriched over the category of bounded lattices and join-homomorphisms. We will define poset objects and group objects in this setting, recovering a number of familiar examples including discrete quantum groups. Thus, the last part of this talk will focus on the category of quantum sets and their binary relations.
+             Specifically, we will look at several examples of
+             biproduct dagger compact closed categories that are
+             enriched over the category of bounded lattices and
+             join-homomorphisms. We will define poset objects and
+             group objects in this setting, recovering a number of
+             familiar examples including discrete quantum
+             groups. Thus, the last part of this talk will focus on
+             the category of quantum sets and their binary relations.
+
+          </li>
+          <li> 
+             <strong> October 11th, 2022 </strong><br> 
+             <a href="https://www.mscs.dal.ca/~pare/">Robert Pare</a>, Dalhousie University<br><br>
+             Title: The Double Category of Abelian Groups<br><br>
+             Abstract: <br>
+             What, indeed, is THE double category of Abelian groups? 
+             There is ample empirical evidence that THE double category
+             of sets has functions and spans as arrows, THE double category
+             of categories functors and profunctors, and perhaps to a lesser
+             extent, THE double category of rings homomorphisms and 
+             bimodules, but there doesn’t seem to be an obvious choice 
+             for THE double category of Abelian groups. Yet, Ab was the 
+             base category for almost all of category theory for the first 25 years 
+             of the subject and has seen a resurgence in recent years.<br><br>
+
+             In this talk I will interview some of the main candidates, evaluate 
+             their qualifications and see if they work well with others, with the
+             view of nominating one for the position of “Double Category of 
+             Abelian Groups".
 
              
           </li>
           <li> 
-             <strong> October 4th, 2022 </strong><br> 
-             TBD<br><br> 
-          </li>
-          <li> 
-             <strong> October 11th, 2022 </strong><br> 
-             Robert Pare<br><br>
-             Title: The Double Category of Abelian Groups<br>
-          </li>
-          <li> 
              <strong> October 18th, 2022 </strong><br> 
-             Michael Lambert<br><br> 
+             <a href="https://michaeljlambert.github.io/">Michael Lambert</a>, University of Massachusetts-Boston<br><br>
+             Title: Cartesian Equipments for Data Manipulation<br><br>
+             Abstract: <br>
+             The aim of this talk is to illustrate how double
+             categories and in particular cartesian equipments provide
+             a framework for databases, knowledge representation, and
+             data manipulation. This work combines the functional
+             approach developed by Robert Kent and David Spivak with
+             the relational and bicategorical approach of Evan
+             Patterson.
           </li>
           <li> 
              <strong> October 25th, 2022 </strong><br> 
-             TBD<br><br> 
+             <a href="https://fermat.github.io/">Frank Fu</a>, Dalhousie University<br><br>
+             Title: A biset-enriched categorical model for Proto-Quipper with dynamic lifting<br><br>
+             Abstract: <br>
+             Quipper and Proto-Quipper are a family of quantum
+             programming languages that, by their nature as circuit
+             description languages, involve two runtimes: one at which
+             the program generates a circuit and one at which the
+             circuit is executed, normally with probabilistic results
+             due to measurements. Accordingly, the language
+             distinguishes two kinds of data: parameters, which are
+             known at circuit generation time, and states, which are
+             known at circuit execution time. Sometimes, it is
+             desirable for the results of measurements to control the
+             generation of the next part of the circuit. Therefore,
+             the language needs to turn states, such as measurement
+             outcomes, into parameters, an operation we
+             call <em>dynamic lifting</em>.<br> <br>
+
+             In this talk, I will first sketch a $\textit{biset}$-enriched category
+             $\overline{\mathbf{C}}$ that can model
+             many aspects of Proto-Quipper. If time permits, I will
+             also talk about how to refine $\overline{\mathbf{C}}$ so
+             that we have an interpretation for dynamic lifting.
+             <br><br> This is a joint work with Kohei Kishida, Neil J. Ross
+             and Peter Selinger.
+          </li>
           </li>
           <li> 
              <strong> November 1st, 2022 </strong><br> 
-             TBD<br><br> 
+             <a href="https://www.mathstat.dal.ca/~xbian/">Xiaoning Bian</a>, Dalhousie University<br><br>
+             Title: 3-qubit Clifford+CS Operators is an amalgamated product of two finite groups<br><br>
+             Abstract: <br>
+             This is a work in progress. We found a finite
+             presentation of the group G of 3-qubit Clifford+CS operators in terms
+             of generators and relations. A corollary is that G is an amalgamated
+             product. The proof is easy &#8212 applying a known method to a known
+             result. The calculation is non-trivial, which involves simplifying
+             hundreds of long equations. Our main contribution is the
+             simplification method. Its idea is factoring a group into a product of
+             cosets, in other words, finding a "nice" tower of group extensions
+             starting from the trivial group to the group in focus.  The ongoing
+             part is to check our result in proof assistant Agda.
           </li>
 
           <li> 
              <strong> November 15th, 2022 </strong><br> 
-             Dongho Lee<br><br> 
+             <a href="https://lmf.cnrs.fr/Perso/Dongho_Lee">Dongho Lee</a>, Dalhousie University<br><br>
+             Title: Formal methods for quantum programming languages<br><br>
+             Abstract: <br>
+             In this talk, I would like to discuss the semantics of a quantum
+             programming language called Proto-Quipper-L. The language formalizes a
+             quantum circuit description language with dynamic lifting, or
+             measurement, which allows us to use the quantum measurement inside the
+             computation. This work has some limitations while providing new
+             questions. For the second part of the talk, I wish to briefly summarize
+             some thoughts on an on-going project on semantics of dependent type
+             systems for quantum computation. 
           </li>
-          <li> 
-             <strong> November 22nd, 2022 </strong><br> 
-             TBD<br><br> 
-          </li>
+
           <li> 
              <strong> November 29th, 2022 </strong><br> 
-             Julien Ross<br><br> 
+             <a href="https://www.mathstat.dal.ca/~neilr/">Julien Ross</a>, Dalhousie University<br><br>
+             Title: Catalytic embeddings: theory and applications<br><br>
+             Abstract: <br>
+             Let $C$ be a quantum circuit and let $G$ be a set of quantum gates. A
+             catalytic embedding of $C$ over $G$ is a pair $(D,v)$ consisting of a state
+             $v$ and a circuit $D$ over $G$ such that for every state $u$ we have <br><br>
+
+             $D(u \otimes v) = (Cu) \otimes v$. <br><br>
+
+             Because the state $v$ is left unchanged by the application of $D$, it is
+             known as a catalyst. Catalytic embeddings are useful when the circuit
+             $C$ cannot be exactly represented over the gate set $G$. In such cases,
+             one can leverage the catalyst to implement (any number of occurrences
+             of) $C$ using circuits over $G$.<br><br>
+
+             In this talk, I will present the theory of catalytic embeddings and
+             discuss applications to the exact and approximate synthesis of quantum
+             circuits.
           </li>
           <li> 
              <strong> December 6th, 2022 </strong><br> 
-             Marcello Lanfranchi<br><br> 
+             <a href="https://sarahmengli.com">Sarah Li</a>, Institute for Quantum Computing,
+             University of Waterloo<br><br>
+             Title: Visualize fault-tolerant CSS codes using ZX calculus<br><br>
+             Abstract:<br>
+             How to correctly exchange messages in a noisy room? In a
+             quantum system, the information storage unit (aka qubit)
+             is incredibly sensitive to interference. As a result,
+             quantum information gets degraded. To this end, quantum
+             error correcting codes (QECC) and stabilizer theory were
+             developed to make large-scale quantum computation
+             practical. CSS codes are a special type of stabilizer
+             codes constructed from classical codes, yielding
+             substantial benefits for QECC developments. <br><br>
+
+             As an intuitive graphical language for quantum computation,
+             ZX-calculus can be formulated as a category of natural numbers with
+             addition as a monoidal structure. It consists of ZX diagrams (string
+             diagrams to represent any linear map, i.e., $(2^n)*(2^m)$ complex
+             matrix) and a set of rewrite rules. In recent years, researchers
+             started to study how stabilizer theory and ZX-calculus are related. By
+             examining QECC through the lens of ZX, we wish to answer a more
+             generic question about QECC construction and its fault-tolerant
+             implementations. In 2022, Kissinger provided a recipe to visualize the
+             encoder for any CSS codes using ZX.<br><br>
+
+             In this talk, I will present our ongoing research efforts to visualize
+             fault-tolerant CSS codes. We generalized Kissinger’s recipe to find a
+             physical implementation for any logical operations in CSS codes, and
+             provided a ZX solution to circumvent the no-go on transversal gates.
           </li>
     </ul>       
   <p>
@@ -124,7 +251,7 @@
     
     <div class="updated">
       <p>
-	  Updated August 29, 2022 by 
+	  Updated Oct 28, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
