--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
 
     <ul>
       <li><p><em>Proto-Quipper with dynamic lifting</em>,
+          January 20, 2023, 50th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL 2023, online talk). [<a href="./document/talks/dyn-popl.pdf">slides</a>]     
+      </p></li>
+      <li><p><em>Proto-Quipper with dynamic lifting</em>,
           June 27th - July 1st, 2022, 19th International Conference on Quantum Physics and Logic, Oxford, UK. [<a href="./document/talks/dyn.pdf">slides</a>]     
       </p></li>
       <li><p><em>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</em>,
