--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <body>
     <a name="Top"></a>
+    <img class="profile" src="images/frank-2023.jpg">
     <div id="header">
       <div id="name-area">
         <span id="name">Frank (Peng) Fu</span> <br />
@@ -25,11 +26,9 @@
         Email: frank-fu@dal.ca
         <br />
       </div>
-      <div id="picture">
-	<img src="images/frank-2023.jpg" style="float:right" width="300" height="200" hspace="10" vspace="10">
-      </div>
+
+
     </div>
-    <br />
     <br />
     <br />
     <br />
