add back phone and address.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <span id="title">Postdoctoral researcher</span> <br />
 	<a href="http://mathstat.dal.ca">Dalhousie University</a> <br />
 	<br />
+	Chase Building 251
+	<br />
+        Phone: 902-494-6760
+	<br />
         Email: frank-fu@dal.ca
         <br />
       </div>
