--- a/index.html
+++ b/index.html
@@ -10,24 +10,19 @@
     <script type="text/javascript" 
             src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>  
-    <script type="text/javascript" src="myjs.js">
-    </script>
   </head>
-
+  <script type="text/javascript" src="myjs.js">
+  </script>
   <body>
     <a name="Top"></a>
     <img class="profile" src="images/frank-2023.jpg">
     <div id="header">
       <div id="name-area">
         <span id="name">Frank (Peng) Fu</span> <br />
-        <span id="title">Postdoctoral researcher</span> <br />
-	<a href="http://mathstat.dal.ca">Dalhousie University</a> <br />
-	<br />
-	Chase Building 251
-	<br />
-        Phone: 902-494-6760
-	<br />
-        Email: frank-fu@dal.ca
+        <span id="title">Assistant Professor</span> <br />
+	<a href="https://cse.sc.edu/">Computer Science & Engineering</a> <br />
+        University of South Carolina<br />
+        Email: pfu@cse.sc.edu
         <br />
       </div>
     </div>
