--- a/index.html
+++ b/index.html
@@ -190,6 +190,20 @@
     <h3><a href="#Top">Talks</a> </h3>
 
     <ul>
+      <li><p><em>Towards an induction principle for nested data types</em>, July 13, 2023,
+          29th Workshop on Logic, Language, Information and Computation, WoLLIC 2023, Halifax, Canada.
+          [<a href="./document/talks/wollic-2023.pdf">slides</a>]     
+      </p></li>      
+      <li><p><em>Towards an induction principle for nested data types</em>, June 8, 2023, 30th Foundational Methods in Computer Science Workshop, Mount Allison University, Sackville, New Brunswick, Canada. 
+      </p></li>
+      <li><p><em>Designing quantum programming languages with types</em>, April 26, 2023, University of South Carolina, Online. 
+      </p></li>
+      <li><p><em>Proto-Quipper with dynamic lifting</em>,
+          April 5, 2023, Quantum Information Theory seminar, University of Bristol. Online.
+      </p></li>
+      <li><p><em>Designing quantum programming languages with types</em>,
+          March 17, 2023, Toronto Metropolitan University, Toronto, Canada.
+      </p></li>
       <li><p><em>Proto-Quipper with dynamic lifting</em>,
           January 20, 2023, 50th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL 2023, online talk). [<a href="./document/talks/dyn-popl.pdf">slides</a>]     
       </p></li>
@@ -263,6 +277,7 @@
     <h3><a href="#Top">Teaching</a> </h3>
 
     <ul>
+      <li> CSCE 330:002, Programming Language Structures, 2023 Fall, University of South Carolina.
       <li> Logic in Computer Science, 2021 Winter, Dalhousie University.
         <p>
           <ul>
