update with some recent talks.

--- a/index.html
+++ b/index.html
@@ -190,6 +190,13 @@
     <h3><a href="#Top">Talks</a> </h3>
 
     <ul>
+      <li><p><em>Quantum computing: a brief introduction and
+            some research topics</em>, Sep 25, Oct 2, 2023,
+          invited talk, the Artificial Intelligence Institute of University of South Carolina,
+          Columbia, SC, USA.
+          [<a href="./document/talks/ai-institute-sep-25-2023.pdf">slides</a>]     
+      </p></li>      
+      
       <li><p><em>Towards an induction principle for nested data types</em>, July 13, 2023,
           29th Workshop on Logic, Language, Information and Computation, WoLLIC 2023, Halifax, Canada.
           [<a href="./document/talks/wollic-2023.pdf">slides</a>]     
