--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
     <h3><a href="#Top">Talks</a> </h3>
 
     <ul>
+      <li><p><em>Designing Quantum Programming Languages with Types</em>, Oct 6, 2023,
+          invited talk, Seminar in Advances in Computing, Computer Science and Engineering Department,
+          Columbia, SC, USA.
+          [<a href="./document/talks/department-seminar-oct-6-2023.pdf">slides</a>]     
+      </p></li>      
+      
       <li><p><em>Quantum computing: a brief introduction and
             some research topics</em>, Sep 25, Oct 2, 2023,
           invited talk, the Artificial Intelligence Institute of University of South Carolina,
